Rework Column and Value matching